Resolve(?) image-stretching issue on ios8 Safari
Safari was stretching the about image weirdly. Weinre and
browsersync's external server tho, oh my god, I can't believe
I wasn't using these before. They're showing me all these problems
the site has that I didn't even know about...

--- a/client/app/styles/main.scss
+++ b/client/app/styles/main.scss
@@ -254,11 +254,19 @@ body{
 #about-box.active{
 	transform: translateX(100%);
 }
-
-.about-headshot {
-	margin-top: 1em;
+.about-image-wrapper{
+	margin-top: 1.5em;
 	width: 9.5em;
+	height: 9.5em;
+	box-sizing: content-box;
 }
+.about-headshot {
+	//box-sizing: content-box;
+	//margin-top: 1em;
+	width: 9.5em;
+	height: auto !important;
+}
+
 .about-text-bubble{
 	display: block;
 	width: 90%;
